# grpc-microservice

api/user-contracts/v1alpha/: user.proto  user_pb2_grpc.py
api/user-contracts/v2alpha/: pyproject.toml  user_pb2.py  user_pb2_grpc.py
api/user_contracts/v1alpha/: pyproject.toml  user_pb2.py
api/user_contracts/v2alpha/: user.proto
scripts/: gen_protos.sh
user-service/application/: server.py
